# PokerBackend

./: .gitignore  Makefile  docker-compose-env.yml  pyproject.toml
backend/: __init__.py  main.py
backend/apps/auth/: __init__.py  errors.py  schema.py  service.py
backend/apps/game/: calculator.py  consts.py  models.py  service.py  state.py  structures.py  task.py
backend/apps/game/commands/: base.py  consts.py
backend/apps/game/commands/game/: handlers.py
backend/apps/game/commands/schemas/: inbound.py  outboud.py
backend/apps/game/commands/table/: handlers.py  schemas.py
backend/apps/lobby/: consts.py  errors.py  models.py  schema.py  service.py
backend/apps/user/: consts.py  errors.py  models.py  schema.py  service.py
backend/core/: timer.py
backend/core/database/: base.py  repository.py
backend/settings/: __init__.py  conf.py  logging.cfg
backend/web/: main.py
backend/web/handlers/: auth.py  dependencies.py  table.py  users.py
backend/web/websockets/: deps.py  game_room.py
migrations/: env.py
migrations/versions/: 8285dbf88423_.py
tests/: conftest.py  test_create_table.py
tests/fixtures/: database.py
